--- a/src/main/resources/templates/usr/layout/layout.html
+++ b/src/main/resources/templates/usr/layout/layout.html
@@ -32,70 +32,74 @@
 </head>
 
 <body>
-<header class="sticky top-0">
-    <div class="navbar max-w-2xl mx-auto bg-base-100 d-flex justify-content-between">
 
-        <!-- 목록 드롭다운 시작 -->
-        <div class="navbar-start">
-            <div class="dropdown">
+<main class="min-h-screen flex flex-col">
+    <header class="sticky top-0">
+        <div class="navbar max-w-2xl mx-auto bg-base-100">
 
-                <!-- 목록 아이콘 -->
-                <label tabindex="0" class="btn btn-ghost btn-circle focus:outline-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                         stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M4 6h16M4 12h16M4 18h7"/>
-                    </svg>
-                </label>
+            <!-- 목록 드롭다운 시작 -->
+            <div class="navbar-start">
+                <div class="dropdown">
 
-                <!-- 드롭다운 -->
-                <ul tabindex="0"
-                    class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
-                    <li th:if="${@rq.logout}" class="flex justify-between">
-                        <a href="/usr/member/login"><i class="fa-solid fa-arrow-right-to-bracket"></i>로그인</a>
-                        <a href="/usr/member/SignUp"><i class="fa-solid fa-user-plus"></i>회원가입</a>
-                    </li>
-                    <li th:if="${@rq.login}">
-                        <a href="javascript:;" onclick="$(this).next().submit();">
-                            <i class="fa-solid fa-arrow-right-from-bracket"></i> 로그아웃
-                        </a>
-                        <form class="!hidden" th:action="/member/logout" method="POST"></form>
-                    </li>
-                    <li><a href="/wishlist" style="color: black;">관심있는 공구 목록</a></li>
-                    <li><a href="/myItems" style="color: black;">나의 상품 목록</a></li>
-                    <li><a href="/store" style="color: black;">스토어</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- 목록 드롭다운 끝 -->
+                    <!-- 목록 아이콘 -->
+                    <label tabindex="0" class="btn btn-ghost btn-circle focus:outline-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M4 6h16M4 12h16M4 18h7"/>
+                        </svg>
+                    </label>
 
-        <!-- 로고 시작 -->
-        <div class="con mx-auto pr-3 h-full center">
-            <a href="/" class="logo text-lg font-bold flex items-center px-3">
-                Gong9ri
-            </a>
-        </div>
-        <!-- 로고 끝 -->
-
-        <!-- 알림 시작 -->
-        <div class="navbar-end">
-            <a id="openModalButton1" class="btn btn-ghost btn-circle" th:if="${@rq.login}">
-                <div class="indicator" style="position: relative;">
-                    <i class="fa-regular fa-bell">
-                            <span class="badge badge-xs badge-secondary indicator-item"
-                                  style="position: absolute; top: -5px; right: -5px;">
-                                <!-- 알림 리스트 -->
-                            </span>
-                    </i>
+                    <!-- 드롭다운 -->
+                    <ul tabindex="0"
+                        class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+                        <li th:if="${@rq.logout}" class="flex justify-between">
+                            <a href="/usr/member/login"><i class="fa-solid fa-arrow-right-to-bracket"></i>로그인</a>
+                            <a href="/usr/member/SignUp"><i class="fa-solid fa-user-plus"></i>회원가입</a>
+                        </li>
+                        <li th:if="${@rq.login}">
+                            <a href="javascript:;" onclick="$(this).next().submit();">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i> 로그아웃
+                            </a>
+                            <form class="!hidden" th:action="/member/logout" method="POST"></form>
+                        </li>
+                        <li><a href="/wishlist" style="color: black;">관심있는 공구 목록</a></li>
+                        <li><a href="/myItems" style="color: black;">나의 상품 목록</a></li>
+                        <li><a href="/store" style="color: black;">스토어</a></li>
+                    </ul>
                 </div>
-            </a>
+            </div>
+            <!-- 목록 드롭다운 끝 -->
+
+            <!-- 로고 시작 -->
+            <div class="con mx-auto pr-3 h-full center">
+                <a href="/" class="logo text-lg font-bold flex items-center px-3">
+                    Gong9ri
+                </a>
+            </div>
+            <!-- 로고 끝 -->
+
+            <!-- 알림 시작 -->
+            <div class="navbar-end">
+                <a id="openModalButton1" class="btn btn-ghost btn-circle" th:if="${@rq.login}">
+                    <div class="indicator" style="position: relative;">
+                        <i class="fa-regular fa-bell">
+                            <span data-test="hasUnreadNotifications" th:if="${@rq.hasUnreadNotifications()}"
+                                  class="badge badge-xs badge-secondary indicator-item"
+                                  style="position: absolute; top: -5px; right: -5px;">
+                            </span>
+                        </i>
+                    </div>
+                </a>
+            </div>
+            <!-- 알림 끝 -->
+
         </div>
-        <!-- 알림 끝 -->
+    </header>
 
-    </div>
-</header>
+    <main layout:fragment="main"></main>
 
-<main layout:fragment="main"></main>
+</main>
 
 </body>
 </html>
