--- a/src/main/resources/templates/product/productDetail.html
+++ b/src/main/resources/templates/product/productDetail.html
@@ -15,7 +15,7 @@
             <!-- 이미지 슬라이드 -->
             <div class="carousel w-full max-w-md mx-auto" th:if="${product.images.isEmpty()}">
                 <img alt="이미지가 없습니다." class="h-full w-full object-cover"
-                     src="https://via.placeholder.com/150"/>
+                     src="/images/noImg.png">
             </div>
             <div class="carousel w-full max-w-md mx-auto" th:if="${!product.images.isEmpty()}">
                 <div class="carousel-item w-full flex justify-center" th:each="image, idx : *{product.images}"
@@ -35,6 +35,9 @@
             <!-- 상품 정보 -->
             <div class="product flex flex-col">
                 <span class="product-name" th:text="*{product.name}"></span>
+                <div class="fs-5 has-text-black text-left">
+                    <span th:text="${product.description}"></span>
+                </div>
                 <div class="discounts">
                     <ul>
                         <li th:each="discount : *{product.discounts}">
@@ -77,7 +80,7 @@
             <!-- 공동구매 버튼 -->
             <div class="flex justify-center">
                 <form method="post" th:action="@{|/groupBuy/make/${product.id}|}">
-                    <button class="btn btn-secondary btn-light border my-2" href="/list" onclick="return confirm('공동구매를 생성하시겠습니까?')"
+                    <button class="btn btn-secondary btn-light border my-2" href="/list" onclick="return confirm('총대가 되면 공동구매에 반드시 참여해야 합니다.\n 공동구매를 생성 하시겠습니까?')"
                             type="submit">
                         총대되기
                     </button>
